# GW_GRB_Correlation

./: README.rst  pyproject.toml  requirements.txt  tox.ini
demo/: fermi_data_exploration.ipynb  fermi_data_exploration.py  fermi_position_predictor.ipynb  fermi_position_predictor.py
docs/: make.bat
gw_grb_correlation/: __init__.py
gw_grb_correlation/Fermi/: __init__.py  fermi_data_preprocessing.py  fermi_display_data.py  fermi_download_data_functions.py  fermi_location_data.py  fermi_poshist_data.py  fermi_time_data.py  fermi_trigger_data.py  fermi_tte_data.py  util.py  visualization.py
src/gw_grb_correlation/: cli.py  fermi_data_exploration.py:Zone.Identifier  fermi_data_preprocessing.py  fermi_display_data.py  fermi_location_data.py  fermi_poshist_data.py  fermi_position_predictor.py  fermi_trigger_data.py  fermi_tte_data.py
tests/: fermi_data_exploration.py  test_fermi_data.py  test_gw_grb_correlation.py
