[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gw_grb_correlation"
version = "0.1.0"
description = "this is a project studying cross-correlation between GW and GRB"
readme = "README.rst"
authors = [
  {name = "Wen-Hua Wu, Stephen Gulley", email = "aw106@rice.edu, sg230@rice.edu"}
]
maintainers = [
  {name = "Wen-Hua Wu, Stephen Gulley", email = "aw106@rice.edu, sg230@rice.edu"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/CrazyAncestor, gulley-s/gw_grb_correlation/issues"
changelog = "https://github.com/CrazyAncestor, gulley-s/gw_grb_correlation/blob/master/changelog.md"
homepage = "https://github.com/CrazyAncestor, gulley-s/gw_grb_correlation"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

